new one from frontend

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-VITE_API_BASE_URL=https://staging-hris.btmlimited.net
+VITE_API_BASE_URL=http://staging-hris.btmlimited.net/api
